syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "via.sep4.protobuf";
option java_outer_classname = "ReviewsProto";

service ReviewService {
  rpc getAllReviews(google.protobuf.Empty) returns (stream Review) {}
  rpc addReview(Review) returns (google.protobuf.Empty) {}
}

message Review {
  int32 id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

